--- a/vars/SLES.yml
+++ b/vars/SLES.yml
@@ -1,10 +1,10 @@
 # SPDX-License-Identifier: MIT
 ---
-# Put internal variables here with ALP-Dolomite specific values.
+# Put internal variables here with SLES specific values.
 
 __certificate_default_directory: /etc/ssl
 
 __certificate_packages:
-  - python311-cryptography
-  - python311-dbus-python
+  - python3-cryptography
+  - python3-dbus-python
   - python3-pyasn1
